// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleTicketList/> should fetch the tickets on render 1`] = `
[
  [
    1,
    {
      "cursor": undefined,
      "limit": 10,
    },
  ],
]
`;

exports[`<RuleTicketList/> should render the rule ticket list 1`] = `
<div>
  <table
    class="wrapper table"
  >
    <thead>
      <tr>
        <th
          colspan="2"
        >
          ticket information
        </th>
        <th>
          created
        </th>
        <th>
          channel
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="avatar"
        >
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="component square"
                style="width: 30px; height: 30px;"
              >
                <div
                  class="initials"
                  style="width: 30px; height: 30px; font-size: 12.5px;"
                >
                  <span
                    style="line-height: 32px;"
                  >
                    AP
                  </span>
                </div>
              </div>
            </div>
          </a>
        </td>
        <td
          class="ticketInfo"
        >
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="ticketSubject"
              >
                Great ticket
              </div>
              <div
                class="ticketDescription"
              />
            </div>
          </a>
        </td>
        <td>
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              31/07/2017
            </div>
          </a>
        </td>
        <td>
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <i
                class="icon source-icon d-inline-block material-icons secondary"
              >
                email
              </i>
            </div>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<RuleTicketList/> should show navigation if response has cursor 1`] = `
<div>
  <table
    class="wrapper table"
  >
    <thead>
      <tr>
        <th
          colspan="2"
        >
          ticket information
        </th>
        <th>
          created
        </th>
        <th>
          channel
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="avatar"
        >
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="component square"
                style="width: 30px; height: 30px;"
              >
                <div
                  class="initials"
                  style="width: 30px; height: 30px; font-size: 12.5px;"
                >
                  <span
                    style="line-height: 32px;"
                  >
                    AP
                  </span>
                </div>
              </div>
            </div>
          </a>
        </td>
        <td
          class="ticketInfo"
        >
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="ticketSubject"
              >
                Great ticket
              </div>
              <div
                class="ticketDescription"
              />
            </div>
          </a>
        </td>
        <td>
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              31/07/2017
            </div>
          </a>
        </td>
        <td>
          <a
            href="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <i
                class="icon source-icon d-inline-block material-icons secondary"
              >
                email
              </i>
            </div>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="navigation"
  >
    <div
      class="ui-multibutton-group-cec3"
      data-name="multi-button"
      data-size="md"
      data-variant="primary"
      style="display: flex;"
    >
      <button
        aria-disabled="true"
        class="ui-button-wrapper-cef1 wrapper md ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
        id="prev-btn"
        type="button"
        variant="primary"
      >
        <span
          class="ui-button-content-cef1"
        >
          <i
            class="material-icons icon"
          >
            keyboard_arrow_left
          </i>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 wrapper md ui-button-fill-cef1 ui-button-secondary-cef1"
        id="next-btn"
        type="button"
        variant="primary"
      >
        <span
          class="ui-button-content-cef1"
        >
          <i
            class="material-icons icon"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;
